# Pioneer_Mart

./: .coverage  .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml  setup.cfg
.github/workflows/: test_runs.yml  tests_PostGreSetup.yml  tests_npm.yml  tests_python.yml  tests_python_macos.yml  tests_python_ubuntu.yml
backend/: db.sqlite3  requirements.txt
backend/backend/: settings.py  urls.py
basic_classes/: Request.py  User.py
frontend/: README.md  config.ts
frontend/.expo/types/: router.d.ts
frontend/__tests__/app/: OtpScreen.test.tsx
frontend/app/(auth)/: index.tsx
frontend/components/: InputField.tsx
reports/: milestone-2-report.md
sprint_reports/: sprint_01_outcomes.md  sprint_01_planning.md  sprint_02.md  sprint_02_planning.md  sprint_03.md  sprint_03_planning.md  sprint_04.md  sprint_04_planning.md  sprint_05.md  sprint_05_planning  sprint_05_planning.md
src/Pioneer_Mart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backend/: .gitignore  db.sqlite3  generate_random_key.py  requirements.txt
src/backend/AUTHKEY/: .gitignore  config_github.py
src/backend/backend/: asgi.py  settings.py  urls.py
src/backend/categories/: models.py  serializers.py  tests.py  urls.py  views.py
src/backend/chat/: consumers.py  tests.py  (+4 more)
src/basic_classes/: User_example.py
src/frontend/: .gitignore  README.md  app.config.js  app.json  config.ts  eas.json  package-lock.json  package.json  setupTests.tsx  tsconfig.json
tests/: backend_categories.py  backend_items.py  test_ex.py  tests_backend_categories.py
(+135 files in other folders)
