[metadata]
name = Pioneer Mart
description = Market software for Grinnell College
author = Muhammad Khalid, Yiyong (Alan) Zhang, Seunghyeon Kim, Lydia Ze, Joyce Gill
license = MIT
license_file = LICENSE
platforms = 
classifiers = 

[options]
packages = 
    basic_classes
install_requires = 
    requests >= 2
python_requires = >=3.6
package_dir == src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    tox<4

[options.package_data]
basic_classes = py.typed

[flake8]
max-line-length = 160

[tox:tox]
min_version = 4.0
env_list =
    3.13
    3.12
    type

[testenv]
deps = pytest
commands = pytest tests

[testenv:mypy_test]
deps = mypy
commands = mypy src

[testenv:flake8_test]
deps = flake8
commands = flake8 src